# DSI-BRS-Assignment

./: .gitignore  Analysis.py  CONDUCT.md  LICENCE  README.md  nyt_bestsellers.py  pyproject.toml  requirements.txt  test_Analysis.py  test_nyt_bestsellers.py
configs/: analysis_config.yml  system_config.yml  user_config.yml
tests/: tests.md
