[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brs_package_nyt_bestsellers"
authors = [
    {name = "Stephen Petersen", email = "petersen.stephen@me.com"},
]
description = ""
version = "0.1.0"
dependencies = ["matplotlib","pyyaml","requests","pandas"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

