[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Analysis.py", "configs/", "test_Analysis.py"]

[project]
name = "brs_package_nyt_bestsellers"
authors = [
    {name = "Stephen Petersen", email = "petersen.stephen@me.com"},
]
description = "Analyses data from the NYT Bestsellers API and produces a plot"
version = "0.1.0"
dependencies = ["matplotlib","pyyaml","requests","pandas"]
requires-python = ">=3.11.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

