[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nyt_bestsellers.py"]

[project]
name = "nyt_bestsellers"
authors = [
    {name = "Stephen Petersen", email = "petersen.stephen@me.com"},
]
description = "Analyses data from the NYT Bestsellers API and produces a plot"
version = "0.1.0"
dependencies = ["matplotlib","pyyaml","requests","pandas"]
requires-python = ">=3.10.12" 
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

